--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,9 +8,11 @@ environment:
 
 dependencies:
   args: ^2.4.0
+  dotenv: ^4.2.0
   mongo_dart: ^0.10.2
   shelf: ^1.4.0
   shelf_router: ^1.1.0
+
 
 dev_dependencies:
   http: ^1.1.0
